--- a/charts/consul/templates/server-config-configmap.yaml
+++ b/charts/consul/templates/server-config-configmap.yaml
@@ -27,7 +27,12 @@ data:
       "data_dir": "/consul/data",
       "domain": "{{ .Values.global.domain }}",
       "ports": {
+        {{- if not .Values.global.tls.enabled }}
         "grpc": 8502,
+        {{- end }}
+        {{- if .Values.global.tls.enabled }}
+        "grpc_tls": 8502,
+        {{- end }}
         "serf_lan": {{ .Values.server.ports.serflan.port }}
       },
       "recursors": {{ .Values.global.recursors | toJson }},
