Added PR GitHub Actions Acceptance Tests (#1643)
* updated github actions versions
- v2 is deprecated in many cases, was resulting in warnings in pipeline

* removed make target for GitHub, no longer needed

* The name CLI conflicts with the runner
- build consul-k8s CLI in pipeline instead for GH action (in future commit)
- build consul-K8s CLI in pipeline for CircleCI. CircleCI uses some different go pathing so can't use make cli-dev explicitly for build-cli step
- change name of cli binary from cli to consul-k8s

* Updated PR acceptance tests to support GitHub actions
- added steps to upload a built docker image to the hashicorppreview docker org as suggested by rel-eng
- upgraded GitHub actions from v2 to v3
- simplified distros built to only those required for testing
- changed to use docker/build-push-action@v3 to not require crt
- tproxy/cni acceptance tests are commented out for the time being

* replace special characters in tests
- GitHub actions can't upload test files with special characters in the name, so replace all special characters with underscores (_)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ commands:
   install-prereqs:
     steps:
       - run:
-          name: Install gotestsum, kind, kubectl, and helm
+          name: Install go, gotestsum, kind, kubectl, and helm
           command: |
             wget https://golang.org/dl/go1.19.2.linux-amd64.tar.gz
             sudo rm -rf /usr/local/go && sudo tar -C /usr/local -xzf go1.19.2.linux-amd64.tar.gz
@@ -73,6 +73,16 @@ commands:
             make kind-cni-calico
             kind create cluster --config=acceptance/framework/environment/cni-kind/kind.config --name dc2 --image kindest/node:<< parameters.version >>
             make kind-cni-calico
+  build-cli:
+    steps:
+      - run:
+          name: Build consul-k8s CLI
+          working_directory: *cli-path
+          command: |
+            go build -o ./bin/consul-k8s
+            sudo cp ./bin/consul-k8s /usr/local/go/bin/
+            consul-k8s version
+
   run-acceptance-tests:
     parameters:
       failfast:
@@ -520,6 +530,7 @@ jobs:
           key: consul-helm-modcache-v2-{{ checksum "acceptance/go.mod" }}
           paths:
             - ~/.go_workspace/pkg/mod
+      - build-cli
       - run: mkdir -p $TEST_RESULTS
       - run-acceptance-tests:
           failfast: true
@@ -552,6 +563,7 @@ jobs:
           key: consul-helm-modcache-v2-{{ checksum "acceptance/go.mod" }}
           paths:
             - ~/.go_workspace/pkg/mod
+      - build-cli
       - run: mkdir -p $TEST_RESULTS
       - run-acceptance-tests:
           failfast: true
@@ -584,6 +596,7 @@ jobs:
           key: consul-helm-modcache-v2-{{ checksum "acceptance/go.mod" }}
           paths:
             - ~/.go_workspace/pkg/mod
+      - build-cli
       - run: mkdir -p $TEST_RESULTS
       - run-acceptance-tests:
           failfast: true
@@ -1127,6 +1140,7 @@ jobs:
           key: consul-helm-modcache-v2-{{ checksum "acceptance/go.mod" }}
           paths:
             - ~/.go_workspace/pkg/mod
+      - build-cli
       - run: mkdir -p $TEST_RESULTS
       - run-acceptance-tests:
           consul-k8s-image: $CONSUL_K8S_IMAGE
@@ -1188,6 +1202,7 @@ jobs:
           key: consul-helm-modcache-v2-{{ checksum "acceptance/go.mod" }}
           paths:
             - ~/.go_workspace/pkg/mod
+      - build-cli
       - run: mkdir -p $TEST_RESULTS
       - run-acceptance-tests:
           consul-k8s-image: $CONSUL_K8S_IMAGE
@@ -1209,6 +1224,7 @@ workflows:
       # The rest of these CircleCI jobs have been migrated to Github Actions. We need to wait until
       # the summer of 2022 for larger puplic Github Action VMs be available before the acceptance tests can
       # be moved
+      # Run acceptance tests using the docker image built for the control plane
       - build-distro:
           OS: "linux"
           ARCH: "amd64 arm64"
@@ -1217,7 +1233,6 @@ workflows:
           context: consul-ci
           requires:
             - build-distros-linux
-      # Run acceptance tests using the docker image built for the control plane
       - acceptance:
           context: consul-ci
           requires:
