--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -344,20 +344,6 @@ jobs:
           target: release-default
           tags: docker.io/hashicorppreview/${{ env.repo }}-control-plane:${{ env.version }}-pr-${{ github.sha }}
 
-# TODO (agentless): re-enable once tproxy is supported
-#  acceptance-tproxy:
-#    #needs: [get-go-version, unit-cli, dev-upload-docker, unit-acceptance-framework, unit-test-helm-templates]
-#    needs: dev-upload-docker
-#    uses: hashicorp/consul-k8s/.github/workflows/reusable-acceptance.yml@main
-#    with:
-#      name: acceptance-tproxy
-#      directory: acceptance/tests
-#      go-version: ${{ needs.get-go-version.outputs.go-version }}
-#      additional-flags: "-use-kind -kubecontext=kind-dc1 -secondary-kubecontext=kind-dc2 -enable-transparent-proxy -consul-image=hashicorppreview/consul-enterprise:1.14-dev"
-#      gotestsum-version: 1.8.2
-#    secrets:
-#      CONSUL_ENT_LICENSE: ${{ secrets.CONSUL_ENT_LICENSE }}
-
   acceptance:
     needs: [ get-product-version, dev-upload-docker, get-go-version ]
     uses: hashicorp/consul-k8s/.github/workflows/reusable-acceptance.yml@main
@@ -365,23 +351,36 @@ jobs:
       name: acceptance
       directory: acceptance/tests
       go-version: ${{ needs.get-go-version.outputs.go-version }}
-      additional-flags: "-use-kind -kubecontext=kind-dc1 -secondary-kubecontext=kind-dc2 -consul-image=hashicorppreview/consul-enterprise:1.14-dev"
+      additional-flags: "-use-kind -kubecontext=kind-dc1 -secondary-kubecontext=kind-dc2 -consul-image=docker.mirror.hashicorp.services/hashicorppreview/consul-enterprise:1.14-dev"
       gotestsum-version: 1.8.2
       consul-k8s-image: docker.io/hashicorppreview/${{ github.event.repository.name }}-control-plane:${{ needs.get-product-version.outputs.product-version }}-pr-${{ github.sha }}
     secrets:
       CONSUL_ENT_LICENSE: ${{ secrets.CONSUL_ENT_LICENSE }}
 
-# TODO (agentless): re-enable once tproxy is supported
-#  acceptance-cni:
-#    needs: dev-upload-docker
-#    uses: hashicorp/consul-k8s/.github/workflows/reusable-acceptance.yml@main
-#    with:
-#      name: acceptance
-#      directory: acceptance/tests
-#      go-version: ${{ needs.get-go-version.outputs.go-version }}
-#      additional-flags: "-use-kind -kubecontext=kind-dc1 -secondary-kubecontext=kind-dc2 -enable-transparent-proxy -enable-cni -consul-image=hashicorppreview/consul-enterprise:1.14-dev"
-#      gotestsum-version: 1.8.2
-#    secrets:
-#      CONSUL_ENT_LICENSE: ${{ secrets.CONSUL_ENT_LICENSE }}
+  acceptance-tproxy:
+    needs: [ get-product-version, dev-upload-docker, get-go-version ]
+    uses: hashicorp/consul-k8s/.github/workflows/reusable-acceptance.yml@main
+    with:
+      name: acceptance-tproxy
+      directory: acceptance/tests
+      go-version: ${{ needs.get-go-version.outputs.go-version }}
+      additional-flags: "-use-kind -kubecontext=kind-dc1 -secondary-kubecontext=kind-dc2 -enable-transparent-proxy -consul-image=docker.mirror.hashicorp.services/hashicorppreview/consul-enterprise:1.14-dev"
+      gotestsum-version: 1.8.2
+      consul-k8s-image: docker.io/hashicorppreview/${{ github.event.repository.name }}-control-plane:${{ needs.get-product-version.outputs.product-version }}-pr-${{ github.sha }}
+    secrets:
+      CONSUL_ENT_LICENSE: ${{ secrets.CONSUL_ENT_LICENSE }}
+
+  acceptance-cni:
+    needs: [ get-product-version, dev-upload-docker, get-go-version ]
+    uses: hashicorp/consul-k8s/.github/workflows/reusable-acceptance.yml@main
+    with:
+      name: acceptance
+      directory: acceptance/tests
+      go-version: ${{ needs.get-go-version.outputs.go-version }}
+      additional-flags: "-use-kind -kubecontext=kind-dc1 -secondary-kubecontext=kind-dc2 -enable-transparent-proxy -enable-cni -consul-image=docker.mirror.hashicorp.services/hashicorppreview/consul-enterprise:1.14-dev"
+      gotestsum-version: 1.8.2
+      consul-k8s-image: docker.io/hashicorppreview/${{ github.event.repository.name }}-control-plane:${{ needs.get-product-version.outputs.product-version }}-pr-${{ github.sha }}
+    secrets:
+      CONSUL_ENT_LICENSE: ${{ secrets.CONSUL_ENT_LICENSE }}
 
 
