--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -2925,6 +2925,11 @@ apiGateway:
     # @type: string
     nodeSelector: null
 
+    # This value defines the tolerations that will be assigned to a gateway pod
+    # This should be a multi-line string matching the
+    # Tolerations (https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/) array in a Pod spec.
+    tolerations: null
+
     # This value defines the type of service created for gateways (e.g. LoadBalancer, ClusterIP)
     serviceType: LoadBalancer
 
@@ -3006,6 +3011,10 @@ apiGateway:
     #
     # @type: string
     nodeSelector: null
+
+    # This value defines the tolerations for api-gateway-controller pod, this should be a multi-line string matching the
+    # Tolerations (https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/) array in a Pod spec.
+    tolerations: null
 
     # Configuration for the Service created for the api-gateway-controller
     service:
